Some fixes related to the new version of PrimeReact: * added dependency on PrimeIcons (there was otherwise no icon in Checkbox or RadioButton) + import primeicons.css in App * Ascii: replaced PrimeReact's RadioButton with standard radio buttons (with a right margin), because RadioButton has a display bug: checked icon not centered (seems due to flex display) * Ascii: Button label seems to be mandatory now + padding 0 in Button span for a correct centering of the label w.r.t. the forced width of 25px * Browser: button icon changed from 'fa-plus' to 'fa-fa-plus'

--- a/src/Ascii.scss
+++ b/src/Ascii.scss
@@ -8,6 +8,10 @@
     width: 250px;
   }
 
+  input[type='radio'] {
+    margin-right: 0.5em;
+  }
+
   > div.Ascii {
     clear: both;
     overflow: auto;
@@ -32,6 +36,10 @@
     font-size: 1.0em;
     width: 25px;
     margin-right: 0;
+  }
+
+  > button.IncDec > span {
+    padding: 0;
   }
 
   > label.IncDec {
